[package]
name = "sunrise_sunset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
reqwest = {version = "0.12.4", features = ["blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
toml = "0.8.12"
url = "2.5.0"
